# public/swagger.yaml
@@ -682,6 +682,28 @@ paths:
                                 - userId
                                 - pid
                             type: object
+    /posts/likescount:
+        get:
+            operationId: GetLikesCount
+            responses:
+                '200':
+                    description: Ok
+                    content:
+                        application/json:
+                            schema:
+                                type: number
+                                format: double
+            tags:
+                - Post
+            security: []
+            parameters:
+                -
+                    in: query
+                    name: pid
+                    required: true
+                    schema:
+                        format: double
+                        type: number
     /posts/search:
         post:
             operationId: Search
@@ -732,9 +754,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                items:
-                                    $ref: '#/components/schemas/getPostResponse'
-                                type: array
+                                $ref: '#/components/schemas/paginationResponse'
             tags:
                 - Post
             security: []
